// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskLimits /> renders TaskLimits correctly 1`] = `
<AdministrationSection
  content={
    <ListGroup
      bsClass="list-group"
    >
      <ListGroupItem
        allowFocus={false}
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <Col
            bsClass="col"
            componentClass="div"
            md={4}
          >
            CPU
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            md={4}
          >
            Memory (GB)
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            md={4}
          >
            Instances
          </Col>
        </Row>
      </ListGroupItem>
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[MockFunction]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="create_sample"
      />
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[MockFunction]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="build_index"
      />
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[MockFunction]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="create_subtraction"
      />
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[MockFunction]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="pathoscope_bowtie"
      />
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[MockFunction]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="nuvs"
      />
    </ListGroup>
  }
  description="Set limits on specific tasks."
  footerComponent={<TasksFooter />}
  title="Task-specific Limits"
/>
`;

exports[`<TaskLimits /> renders TasksFooter correctly 1`] = `
<small
  className="text-warning"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="exclamation-triangle"
    pullRight={false}
  />
   Changing CPU and memory settings will not affect jobs that have already been initialized.
</small>
`;

exports[`<TaskLimits /> renders correctly 1`] = `
<AdministrationSection
  content={
    <ListGroup
      bsClass="list-group"
    >
      <ListGroupItem
        allowFocus={false}
      >
        <Row
          bsClass="row"
          componentClass="div"
        >
          <Col
            bsClass="col"
            componentClass="div"
            md={4}
          >
            CPU
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            md={4}
          >
            Memory (GB)
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            md={4}
          >
            Instances
          </Col>
        </Row>
      </ListGroupItem>
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[Function]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="create_sample"
      />
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[Function]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="build_index"
      />
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[Function]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="create_subtraction"
      />
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[Function]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="pathoscope_bowtie"
      />
      <Task
        inst={10}
        mem={5}
        minMem={5}
        minProc={3}
        onChangeLimit={[Function]}
        proc={3}
        readOnlyFields={
          Array [
            "create_subtraction",
            "build_index",
          ]
        }
        resourceMem={5}
        resourceProc={3}
        taskPrefix="nuvs"
      />
    </ListGroup>
  }
  description="Set limits on specific tasks."
  footerComponent={<TasksFooter />}
  title="Task-specific Limits"
/>
`;
